feat(state): implement cloneState method for delta data handling in OverAllState